--- a/html/landmark_france.html
+++ b/html/landmark_france.html
@@ -16,7 +16,7 @@
 
     <div class="inner-box">
 
-      <div class="">
+      <div>
         <img src="" alt="">
         <h2>Brandenburg Gate</h2>
         <p>1788년에 건설을 시작해 1791년에 완공된 것으로 당시 프러시아 제국의 개선문으로 만들어졌다.
