--- a/html/landmark_france.html
+++ b/html/landmark_france.html
@@ -12,79 +12,79 @@
   <div class="bg">
     <div class="nation-big">France</div>
     <div class="nation-small">France</div>
-    <input type="button" />
+    <div><input type="button" class="menu-button"/><img src="../images/menu_button.png" /></div>
 
     <div class="inner-box">
 
-      <div>
-        <img src="" alt="">
-        <h2>Brandenburg Gate</h2>
-        <p>1788년에 건설을 시작해 1791년에 완공된 것으로 당시 프러시아 제국의 개선문으로 만들어졌다.
+      <div class="land-wrap">
+        <img src="../images/france_rand_1-1.jpg" alt="" class="land-image">
+        <h2 class="land-title">Brandenburg Gate</h2>
+        <p class="land-paragraph">1788년에 건설을 시작해 1791년에 완공된 것으로 당시 프러시아 제국의 개선문으로 만들어졌다.
           초기 고전주의 양식의 건물이며 꼭대기에 있는 승리의 여신 빅토리아가 마차를 끌고 가는 모습의
           동상은 프랑스군에게 빼앗겨 파리로 옮겨졌었지만 되찾아왔다.</p>
       </div>
 
-      <div>
-        <img src="" alt="">
-        <p>1788년에 건설을 시작해 1791년에 완공된 것으로 당시 프러시아 제국의 개선문으로 만들어졌다.
+      <div class="land-wrap">
+        <img src="../images/france_rand_1-2.jpg" alt="" class="land-image">
+        <p class="land-paragraph">1788년에 건설을 시작해 1791년에 완공된 것으로 당시 프러시아 제국의 개선문으로 만들어졌다.
           초기 고전주의 양식의 건물이며 꼭대기에 있는 승리의 여신 빅토리아가 마차를 끌고 가는 모습의
           동상은 프랑스군에게 빼앗겨 파리로 옮겨졌었지만 되찾아왔다.</p>
       </div>
 
-      <div>
-        <img src="" alt="">
-        <p>Brandenburger Tor 2, 10117 Berlin, Germany</p>
-        <p>[Line U55]S+U Brandenburger Tor역</p>
-        <p>49 30 25002333</p>
-        <p>www.berlin.de/orte/sehenswuerdigkeiten/brandenburger-tor/</p>
+      <div class="land-wrap">
+        <img src="../images/france_rand_1-3.jpg" alt="" class="land-image">
+        <p class="land-address">Brandenburger Tor 2, 10117 Berlin, Germany</p>
+        <p class="land-transport">[Line U55]S+U Brandenburger Tor역</p>
+        <p class="land-phone">49 30 25002333</p>
+        <p class="land-web">www.berlin.de/orte/sehenswuerdigkeiten/brandenburger-tor/</p>
       </div>
 
 
-      <div>
-        <img src="" alt="">
-        <h2>Brandenburg Gate</h2>
-        <p>1788년에 건설을 시작해 1791년에 완공된 것으로 당시 프러시아 제국의 개선문으로 만들어졌다.
+      <div class="land-wrap">
+        <img src="../images/france_rand_2-1.jpg" alt="" class="land-image">
+        <h2 class="land-title">Brandenburg Gate</h2>
+        <p class="paragraph">1788년에 건설을 시작해 1791년에 완공된 것으로 당시 프러시아 제국의 개선문으로 만들어졌다.
           초기 고전주의 양식의 건물이며 꼭대기에 있는 승리의 여신 빅토리아가 마차를 끌고 가는 모습의
           동상은 프랑스군에게 빼앗겨 파리로 옮겨졌었지만 되찾아왔다.</p>
       </div>
 
-      <div>
-        <img src="" alt="">
-        <p>1788년에 건설을 시작해 1791년에 완공된 것으로 당시 프러시아 제국의 개선문으로 만들어졌다.
+      <div class="land-wrap">
+        <img src="../images/france_rand_2-2.jpg" alt="" class="land-image">
+        <p class="land-paragraph">1788년에 건설을 시작해 1791년에 완공된 것으로 당시 프러시아 제국의 개선문으로 만들어졌다.
           초기 고전주의 양식의 건물이며 꼭대기에 있는 승리의 여신 빅토리아가 마차를 끌고 가는 모습의
           동상은 프랑스군에게 빼앗겨 파리로 옮겨졌었지만 되찾아왔다.</p>
       </div>
 
-      <div>
-        <img src="" alt="">
-        <p>Brandenburger Tor 2, 10117 Berlin, Germany</p>
-        <p>[Line U55]S+U Brandenburger Tor역</p>
-        <p>49 30 25002333</p>
-        <p>www.berlin.de/orte/sehenswuerdigkeiten/brandenburger-tor/</p>
+      <div class="land-wrap">
+        <img src="../images/france_rand_2-3.jpg" alt="" class="land-image">
+        <p class="land-address">Brandenburger Tor 2, 10117 Berlin, Germany</p>
+        <p class="land-transport">[Line U55]S+U Brandenburger Tor역</p>
+        <p class="land-phone">49 30 25002333</p>
+        <p class="land-web">www.berlin.de/orte/sehenswuerdigkeiten/brandenburger-tor/</p>
       </div>
 
 
-      <div>
-        <img src="" alt="">
-        <h2>Brandenburg Gate</h2>
-        <p>1788년에 건설을 시작해 1791년에 완공된 것으로 당시 프러시아 제국의 개선문으로 만들어졌다.
+      <div class="land-wrap">
+        <img src="../images/france_rand_3-1.jpg" alt="" class="land-image">
+        <h2 class="land-title">Brandenburg Gate</h2>
+        <p class="land-paragraph">1788년에 건설을 시작해 1791년에 완공된 것으로 당시 프러시아 제국의 개선문으로 만들어졌다.
           초기 고전주의 양식의 건물이며 꼭대기에 있는 승리의 여신 빅토리아가 마차를 끌고 가는 모습의
           동상은 프랑스군에게 빼앗겨 파리로 옮겨졌었지만 되찾아왔다.</p>
       </div>
 
-      <div>
-        <img src="" alt="">
-        <p>1788년에 건설을 시작해 1791년에 완공된 것으로 당시 프러시아 제국의 개선문으로 만들어졌다.
+      <div class="land-wrap">
+        <img src="../images/france_rand_3-2.jpg" alt="" class="land-image">
+        <p class="land-paragraph">1788년에 건설을 시작해 1791년에 완공된 것으로 당시 프러시아 제국의 개선문으로 만들어졌다.
           초기 고전주의 양식의 건물이며 꼭대기에 있는 승리의 여신 빅토리아가 마차를 끌고 가는 모습의
           동상은 프랑스군에게 빼앗겨 파리로 옮겨졌었지만 되찾아왔다.</p>
       </div>
 
-      <div>
-        <img src="" alt="">
-        <p>Brandenburger Tor 2, 10117 Berlin, Germany</p>
-        <p>[Line U55]S+U Brandenburger Tor역</p>
-        <p>49 30 25002333</p>
-        <p>www.berlin.de/orte/sehenswuerdigkeiten/brandenburger-tor/</p>
+      <div class="land-wrap">
+        <img src="../images/france_rand_3-3.jpg" alt="" class="land-image">
+        <p class="land-address">Brandenburger Tor 2, 10117 Berlin, Germany</p>
+        <p class="land-transport">[Line U55]S+U Brandenburger Tor역</p>
+        <p class="land-phone">49 30 25002333</p>
+        <p class="land-web">www.berlin.de/orte/sehenswuerdigkeiten/brandenburger-tor/</p>
       </div>
 
 
