--- a/html_src/landmark_france.html
+++ b/html_src/landmark_france.html
@@ -5,7 +5,7 @@
     <div class="nation-small">France</div>
     <div class="nation-big">France</div>
 
-    <div><input type="button" class="menu-button"/><img src="../images/menu_button.png" /></div>
+    <input type="button" value="메뉴토글" class="btn-toggle"/>
 
     <div class="inner-box">
 
@@ -83,10 +83,14 @@
 
     </div>
 
-    <div>Land mark</div>
-    <div>Eiffel Tower</div>
-    <div>Luvre Museum</div>
-    <div>Arc de Triomphe</div>
+    <div class="timeline">
+      <div class="timeline-wrap">
+        <div class="timeline-name1"><span class="margin">Land mark</span></div>
+        <div class="timeline-name2"><span class="margin">Eiffel Tower</span></div>
+        <div class="timeline-name3"><span class="margin">Luvre Museum</span></div>
+        <div class="timeline-name4"><span class="margin">Arc de Triomphe</span></div>
+      </div>
+    </div>
   </div>
 </section>
 
