--- a/html_src/main.html
+++ b/html_src/main.html
@@ -1,10 +1,84 @@
 <!--=include _include/_header.html -->
-<section>
+<section class="main-inner-box">
   <input type="button" value="메뉴토글" class="btn-menuToggle" />
 
-  <div>
-    <img src="">
-    
+  <div class="main">
+    <img src="../images/main1.jpg" class="main-image"/>
+    <div class="main-wrap">
+
+      <div class="main-text">
+        <div class="main-text-number">01</div>
+        <div class="main-text-name">Germany</div>
+        <div class="main-text-big">G</div>
+      </div>
+
+
+
+
+    </div>
+    <div class="main-wrap">
+      <img src="../images/main2.jpg" class="main-image"/>
+      <div class="main-text">
+        <div class="main-text-number">01</div>
+        <div class="main-text-name">Germany</div>
+        <div class="main-text-big">G</div>
+      </div>
+
+
+
+
+    </div>
+    <div class="main-wrap">
+      <img src="../images/main3.jpg" class="main-image"/>
+      <div class="main-text">
+        <div class="main-text-number">01</div>
+        <div class="main-text-name">Germany</div>
+        <div class="main-text-big">G</div>
+      </div>
+
+
+
+
+    </div>
+    <div class="main-wrap">
+      <img src="../images/main4.jpg" class="main-image"/>
+      <div class="main-text">
+        <div class="main-text-number">01</div>
+        <div class="main-text-name">Germany</div>
+        <div class="main-text-big">G</div>
+      </div>
+
+
+
+
+    </div>
+    <div class="main-wrap">
+      <img src="../images/main5.jpg" class="main-image"/>
+      <div class="main-text">
+        <div class="main-text-number">01</div>
+        <div class="main-text-name">Germany</div>
+        <div class="main-text-big">G</div>
+      </div>
+
+
+
+
+    </div>
+    <div class="main-wrap">
+      <img src="../images/main6.jpg" class="main-image"/>
+      <div class="main-text">
+        <div class="main-text-number">01</div>
+        <div class="main-text-name">Germany</div>
+        <div class="main-text-big">G</div>
+      </div>
+
+
+
+
+    </div>
+
+
+
   </div>
 </section>
 
