--- a/html/landmark_france.html
+++ b/html/landmark_france.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title></title>
   <link rel="stylesheet" href="../css/style.css" />
+  <script src="../js/lib/jquery-3.2.1.min.js"></script>
 
 </head>
 <body>
