--- a/html/landmark_france.html
+++ b/html/landmark_france.html
@@ -5,6 +5,7 @@
   <title></title>
   <link rel="stylesheet" href="../css/style.css" />
   <script src="../js/lib/jquery-3.2.1.min.js"></script>
+  <script src="../js/main.js"></script>
 
 </head>
 <body>
@@ -41,7 +42,6 @@
         <p class="land-web">www.berlin.de/orte/sehenswuerdigkeiten/brandenburger-tor/</p>
       </div>
 
-
       <div class="land-wrap">
         <img src="../images/france_land_2-1.jpg" alt="" class="land-image">
         <h2 class="land-title">Brandenburg Gate</h2>
@@ -64,7 +64,6 @@
         <p class="land-phone">49 30 25002333</p>
         <p class="land-web">www.berlin.de/orte/sehenswuerdigkeiten/brandenburger-tor/</p>
       </div>
-
 
       <div class="land-wrap">
         <img src="../images/france_land_3-1.jpg" alt="" class="land-image">
