--- a/html_src/main.html
+++ b/html_src/main.html
@@ -1,83 +1,68 @@
 <!--=include _include/_header.html -->
-<section class="main-inner-box">
+<section class="main-inner-box germany">
   <input type="button" value="메뉴토글" class="btn-menuToggle" />
 
   <div class="main">
-    <img src="../images/main1.jpg" class="main-image"/>
-    <div class="main-wrap">
 
-      <div class="main-text">
-        <div class="main-text-number">01</div>
-        <div class="main-text-name">Germany</div>
-        <div class="main-text-big">G</div>
+    <div class="main-hover">
+      <div class="main-wrap on">
+        <div class="main-text">
+          <div class="main-text-number">01</div>
+          <div class="main-text-name">Germany</div>
+          <div class="main-text-big">G</div>
+        </div>
       </div>
-
-
-
-
-    </div>
-    <div class="main-wrap">
-      <img src="../images/main2.jpg" class="main-image"/>
-      <div class="main-text">
-        <div class="main-text-number">01</div>
-        <div class="main-text-name">Germany</div>
-        <div class="main-text-big">G</div>
-      </div>
-
-
-
-
-    </div>
-    <div class="main-wrap">
-      <img src="../images/main3.jpg" class="main-image"/>
-      <div class="main-text">
-        <div class="main-text-number">01</div>
-        <div class="main-text-name">Germany</div>
-        <div class="main-text-big">G</div>
-      </div>
-
-
-
-
-    </div>
-    <div class="main-wrap">
-      <img src="../images/main4.jpg" class="main-image"/>
-      <div class="main-text">
-        <div class="main-text-number">01</div>
-        <div class="main-text-name">Germany</div>
-        <div class="main-text-big">G</div>
-      </div>
-
-
-
-
-    </div>
-    <div class="main-wrap">
-      <img src="../images/main5.jpg" class="main-image"/>
-      <div class="main-text">
-        <div class="main-text-number">01</div>
-        <div class="main-text-name">Germany</div>
-        <div class="main-text-big">G</div>
-      </div>
-
-
-
-
-    </div>
-    <div class="main-wrap">
-      <img src="../images/main6.jpg" class="main-image"/>
-      <div class="main-text">
-        <div class="main-text-number">01</div>
-        <div class="main-text-name">Germany</div>
-        <div class="main-text-big">G</div>
-      </div>
-
-
-
-
     </div>
 
+    <div class="main-hover">
+      <div class="main-wrap">
+        <div class="main-text">
+          <div class="main-text-number">02</div>
+          <div class="main-text-name">France</div>
+          <div class="main-text-big">F</div>
+      </div>
+      </div>
+    </div>
 
+    <div class="main-hover">
+      <div class="main-wrap">
+        <div class="main-text">
+          <div class="main-text-number">03</div>
+          <div class="main-text-name">Italy</div>
+          <div class="main-text-big">I</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="main-hover">
+      <div class="main-wrap">
+        <div class="main-text">
+          <div class="main-text-number">01</div>
+          <div class="main-text-name">swiss</div>
+          <div class="main-text-big">G</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="main-hover">
+      <div class="main-wrap">
+        <div class="main-text">
+          <div class="main-text-number">01</div>
+          <div class="main-text-name">netherlands</div>
+          <div class="main-text-big">G</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="main-hover">
+      <div class="main-wrap">
+        <div class="main-text">
+          <div class="main-text-number">01</div>
+          <div class="main-text-name">czech</div>
+          <div class="main-text-big">G</div>
+        </div>
+      </div>
+    </div>
 
   </div>
 </section>
