--- a/html/main.html
+++ b/html/main.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="../css/style.css" />
   <script src="../js/lib/jquery-3.2.1.min.js"></script>
   <script src="../js/main.js"></script>
+  <script src="../js/menu.js"></script>
 
 </head>
 <body>
