--- a/html/main.html
+++ b/html/main.html
@@ -48,9 +48,9 @@
     <div class="main-hover">
       <div class="main-wrap">
         <div class="main-text">
-          <div class="main-text-number">01</div>
+          <div class="main-text-number">04</div>
           <div class="main-text-name">swiss</div>
-          <div class="main-text-big">G</div>
+          <div class="main-text-big">S</div>
         </div>
       </div>
     </div>
@@ -58,9 +58,9 @@
     <div class="main-hover">
       <div class="main-wrap">
         <div class="main-text">
-          <div class="main-text-number">01</div>
+          <div class="main-text-number">05</div>
           <div class="main-text-name">netherlands</div>
-          <div class="main-text-big">G</div>
+          <div class="main-text-big">N</div>
         </div>
       </div>
     </div>
@@ -68,9 +68,9 @@
     <div class="main-hover">
       <div class="main-wrap">
         <div class="main-text">
-          <div class="main-text-number">01</div>
+          <div class="main-text-number">06</div>
           <div class="main-text-name">czech</div>
-          <div class="main-text-big">G</div>
+          <div class="main-text-big">C</div>
         </div>
       </div>
     </div>
