--- a/html/schedule.html
+++ b/html/schedule.html
@@ -1,4 +1,15 @@
-<!--=include _include/_header.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title></title>
+  <link rel="stylesheet" href="../css/style.css" />
+  <script src="../js/lib/jquery-3.2.1.min.js"></script>
+  <script src="../js/main.js"></script>
+  <script src="../js/menu.js"></script>
+
+</head>
+<body>
 <section class="bg2">
   <input type="button" value="메뉴토글" class="btn-toggle"/>
 
