--- a/html/transportation.html
+++ b/html/transportation.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-<section class="bg-transport">
+<section class="bg2">
   <input type="button" value="메뉴토글" class="btn-toggle"/>
 
   <div class="transport-tip">Transportation Tip</div>
