--- a/html_src/transportation.html
+++ b/html_src/transportation.html
@@ -1,5 +1,5 @@
 <!--=include _include/_header.html -->
-<section class="bg-transport">
+<section class="bg2">
   <input type="button" value="메뉴토글" class="btn-toggle"/>
 
   <div class="transport-tip">Transportation Tip</div>
