--- a/html/landmark_france.html
+++ b/html/landmark_france.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>All about Europe</title>
   <link rel="stylesheet" href="../css/style.css" />
   <script src="../js/lib/jquery-3.2.1.min.js"></script>
   <script src="../js/main.js"></script>
   <script src="../js/menu.js"></script>
+  <script src="../js/landmark.js"></script>
 
 </head>
 <body>
@@ -91,6 +92,8 @@
 
 
     </div>
+
+
 
     <div class="timeline">
       <div class="timeline-wrap">
