--- a/html_src/menu.html
+++ b/html_src/menu.html
@@ -42,27 +42,27 @@
 
 
   <div class="inner-box2">
-    <div class="menu-title">
-      <div class="menu-title-item">Land Mark</div>
-      <div class="menu-title-item">Recommendation schedule</div>
-      <div class="menu-title-item">Transport tip</div>
-    </div>
+    <ul class="menu-title">
+      <li class="menu-title-item"><a href="#" class="menu-title-link">Land Mark</a></li>
+      <li class="menu-title-item"><a href="#" class="menu-title-link">Recommendation schedule</a></li>
+      <li class="menu-title-item"><a href="#" class="menu-title-link">Transport tip</a></li>
+    </ul>
 
-    <div class="menu-landmark">
-      <div class="menu-landmark-item">Germany</div>
-      <div class="menu-landmark-item">France</div>
-      <div class="menu-landmark-item">Italy</div>
-      <div class="menu-landmark-item">Swiss</div>
-      <div class="menu-landmark-item">Netherlands</div>
-      <div class="menu-landmark-item">Czech</div>
-    </div>
+    <ul class="menu-landmark on">
+      <li class="menu-landmark-item"><a href="#" class="menu-landmark-link">Germany</a></li>
+      <li class="menu-landmark-item"><a href="#" class="menu-landmark-link">France</a></li>
+      <li class="menu-landmark-item"><a href="#" class="menu-landmark-link">Italy</a></li>
+      <li class="menu-landmark-item"><a href="#" class="menu-landmark-link">Swiss</a></li>
+      <li class="menu-landmark-item"><a href="#" class="menu-landmark-link">Netherlands</a></li>
+      <li class="menu-landmark-item"><a href="#" class="menu-landmark-link">Czech</a></li>
+    </ul>
 
 
-    <div class="menu-schedule">
-      <div class="menu-schedule-item">Germany</div>
-      <div class="menu-schedule-item">France</div>
-      <div class="menu-schedule-item">Italy</div>
-    </div>
+    <ul class="menu-schedule on">
+      <li class="menu-schedule-item"><a href="#" class="menu-schedule-link">Germany</a></li>
+      <li class="menu-schedule-item"><a href="#" class="menu-schedule-link">France</a></li>
+      <li class="menu-schedule-item"><a href="#" class="menu-schedule-link">Italy</a></li>
+    </ul>
   </div>
 </section>
 
