--- a/html/menu.html
+++ b/html/menu.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>All about Europe</title>
   <link rel="stylesheet" href="../css/style.css" />
   <script src="../js/lib/jquery-3.2.1.min.js"></script>
   <script src="../js/main.js"></script>
   <script src="../js/menu.js"></script>
+  <script src="../js/landmark.js"></script>
 
 </head>
 <body>
@@ -53,27 +54,27 @@
 
 
   <div class="inner-box2">
-    <div class="menu-title">
-      <div class="menu-title-item">Land Mark</div>
-      <div class="menu-title-item">Recommendation schedule</div>
-      <div class="menu-title-item">Transport tip</div>
-    </div>
+    <ul class="menu-title">
+      <li class="menu-title-item"><a href="#" class="menu-title-link">Land Mark</a></li>
+      <li class="menu-title-item"><a href="#" class="menu-title-link">Recommendation schedule</a></li>
+      <li class="menu-title-item"><a href="#" class="menu-title-link">Transport tip</a></li>
+    </ul>
 
-    <div class="menu-landmark">
-      <div class="menu-landmark-item">Germany</div>
-      <div class="menu-landmark-item">France</div>
-      <div class="menu-landmark-item">Italy</div>
-      <div class="menu-landmark-item">Swiss</div>
-      <div class="menu-landmark-item">Netherlands</div>
-      <div class="menu-landmark-item">Czech</div>
-    </div>
+    <ul class="menu-landmark on">
+      <li class="menu-landmark-item"><a href="#" class="menu-landmark-link">Germany</a></li>
+      <li class="menu-landmark-item"><a href="#" class="menu-landmark-link">France</a></li>
+      <li class="menu-landmark-item"><a href="#" class="menu-landmark-link">Italy</a></li>
+      <li class="menu-landmark-item"><a href="#" class="menu-landmark-link">Swiss</a></li>
+      <li class="menu-landmark-item"><a href="#" class="menu-landmark-link">Netherlands</a></li>
+      <li class="menu-landmark-item"><a href="#" class="menu-landmark-link">Czech</a></li>
+    </ul>
 
 
-    <div class="menu-schedule">
-      <div class="menu-schedule-item">Germany</div>
-      <div class="menu-schedule-item">France</div>
-      <div class="menu-schedule-item">Italy</div>
-    </div>
+    <ul class="menu-schedule on">
+      <li class="menu-schedule-item"><a href="#" class="menu-schedule-link">Germany</a></li>
+      <li class="menu-schedule-item"><a href="#" class="menu-schedule-link">France</a></li>
+      <li class="menu-schedule-item"><a href="#" class="menu-schedule-link">Italy</a></li>
+    </ul>
   </div>
 </section>
 
